# gst-plugins-ugly

./: configure.ac  meson.build
ext/: meson.build
ext/a52dec/: gsta52dec.c  meson.build
ext/amrnb/: amrnbdec.c  meson.build
ext/amrwbdec/: amrwbdec.c  meson.build
ext/cdio/: meson.build
ext/dvdread/: dvdreadsrc.c  meson.build
ext/lame/: meson.build
ext/mad/: meson.build
ext/mpeg2dec/: gstmpeg2dec.c  meson.build  perftest.c
ext/mpg123/: meson.build
ext/twolame/: meson.build
ext/x264/: gstx264enc.h  meson.build
gst/asfdemux/: meson.build
gst/dvdlpcmdec/: meson.build
gst/dvdsub/: meson.build
gst/realmedia/: meson.build
gst/xingmux/: meson.build
